--- a/style.css
+++ b/style.css
@@ -2,6 +2,82 @@
     font-family: Roboto, sans-serif;
 }
 
+.header {
+    background-color: #1F2937;
+    padding-left: 160px;
+    padding-right: 160px;
+}
+
+.header_bar {
+    display: flex;
+    flex-direction: row;
+}
+
+.logo {
+    color: #F9FAF8;
+    font-size: 24px;
+    margin-top: 20px;
+    flex: 1;
+}
+
+.links {
+    display: flex;
+    flex-direction: row;
+}
+
+.links div {
+    color: #E5E7EB;
+    font-size: 18px;
+    margin: 20px;
+    text-align: center;
+    flex: auto;
+}
+
+.header_content {
+    display: flex;
+    flex-direction: row;
+    margin-right: 20px;
+}
+
+.header_text {
+    display:  flex;
+    flex-direction: column;
+}
+
+.header_title {
+    color: #F9FAF8;
+    font-size: 48px;
+    font-weight: 900;
+}
+
+.header_content {
+    color: #E5E7EB;
+    font-size: 18px;
+    text-align: left;
+    flex: auto;
+}
+
+button {
+    background-color: #3882F6;
+    color: #F9FAF8;
+    font-size: 18px;
+    text-align: center;
+    border-radius: 8px;
+    padding: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.header_image {
+    background-color: grey;
+    color: #F9FAF8;
+    flex-basis: 50%;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
+    display: flex;
+}
+
 .footer {
     color: white;
     background-color: #1F2937;
