Adding quote section

--- a/style.css
+++ b/style.css
@@ -122,6 +122,26 @@ button {
     flex: 1;
 }
 
+.quote {
+    background-color: #E5E7EB;
+    padding-left: 200px;
+    padding-right: 200px;
+    padding-top: 40px;
+    padding-bottom: 80px;
+}
+
+.quote p {
+    color: #1F2937;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+}
+
+.author {
+    color: #1F2937;
+    text-align: right;
+}
+
 .footer {
     color: #F9FAF8;
     background-color: #1F2937;
