--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ button {
     padding: 10px;
     padding-left: 20px;
     padding-right: 20px;
+    flex: 1;
 }
 
 .header_image {
@@ -140,6 +141,35 @@ button {
 .author {
     color: #1F2937;
     text-align: right;
+}
+
+.action {
+    background-color: #F9FAF8;
+    display: flex;
+    flex-direction: column;
+}
+
+.box {
+    background-color: #3882F6;
+    border-radius: 16px;
+    margin-left: 160px;
+    margin-right: 160px;
+    margin-top: 80px;
+    margin-bottom: 80px;
+    padding-left: 80px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    flex: 1;
+}
+
+.sign_up {
+    color: #E5E7EB;
+    font-size: 16px;
+}
+
+.call{
+    color: #F9FAF8;
+    font-size: 24px;
 }
 
 .footer {
