--- a/style.css
+++ b/style.css
@@ -99,28 +99,29 @@ button {
 
 .info_images {
     display: flex;
-
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
 } 
 
 .image1 .image2 .image3 .image4 {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    gap: 10px;
+    flex-direction: column;
+    text-wrap: balance;
+    flex: 1;
 }
 
 .image {
     border: 4px solid #3882F6;
     border-radius: 16px;
     height: 200px;
-    width: 200px;
-    flex: 1;
+    flex: 1 1 auto;
 }
 
 .text {
     text-align: center;
-    flex: 1;
+    flex: 1 1 auto;
 }
 
 .quote {
@@ -146,28 +147,43 @@ button {
 .action {
     background-color: #F9FAF8;
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 80px;
 }
 
 .box {
     background-color: #3882F6;
     border-radius: 16px;
-    margin-left: 160px;
-    margin-right: 160px;
-    margin-top: 80px;
-    margin-bottom: 80px;
-    padding-left: 80px;
+    padding: 20px;
+    padding-left: 100px;
+    padding-right: 100px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 200px
+}
+
+.container1 {
+    height: 80px;
+    flex: 1 1 auto;
+}
+
+.container2 {
+    height: 80px;
     padding-top: 40px;
-    padding-bottom: 40px;
-    flex: 1;
+    flex: 1 1 auto;
 }
 
 .sign_up {
+    flex-direction: row;
     color: #E5E7EB;
     font-size: 16px;
 }
 
 .call{
+    flex-direction: row;
     color: #F9FAF8;
     font-size: 24px;
 }
