--- a/style.css
+++ b/style.css
@@ -44,19 +44,22 @@
 .header_text {
     display:  flex;
     flex-direction: column;
+    align-items: left;
+    justify-content: center;
+    gap: 20px;
 }
 
 .header_title {
     color: #F9FAF8;
     font-size: 48px;
     font-weight: 900;
+    flex: 1 1 auto;
 }
 
 .header_content {
     color: #E5E7EB;
     font-size: 18px;
-    text-align: left;
-    flex: auto;
+    flex: 1 1 auto;
 }
 
 button {
@@ -68,7 +71,7 @@ button {
     padding: 10px;
     padding-left: 20px;
     padding-right: 20px;
-    flex: 1;
+    flex: 1 1 auto;
 }
 
 .header_image {
@@ -77,7 +80,6 @@ button {
     flex-basis: 50%;
     justify-content: center;
     align-items: center;
-    height: auto;
     display: flex;
 }
 
