--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@
 }
 
 button {
-    background-color: #3882F6;
+    background-color: #0b8f12;
     color: #F9FAF8;
     font-size: 18px;
     text-align: center;
@@ -115,7 +115,7 @@ button {
 }
 
 .image {
-    border: 4px solid #3882F6;
+    border: 4px solid #0b8f12;
     border-radius: 16px;
     height: 200px;
     flex: 1 1 auto;
@@ -155,7 +155,7 @@ button {
 }
 
 .box {
-    background-color: #3882F6;
+    background-color: #0b8f12;
     border-radius: 16px;
     padding: 20px;
     padding-left: 100px;
