--- a/styles/style.css
+++ b/styles/style.css
@@ -11,21 +11,28 @@
 .header_bar {
     display: flex;
     flex-direction: row;
+    flex: auto;
 }
 
 .logo {
     color: #F9FAF8;
     font-size: 24px;
     margin-top: 20px;
-    flex: 1;
 }
 
 .links {
+    display: flex;
     color: #E5E7EB;
     font-size: 18px;
     margin: 20px;
     text-align: center;
-    flex: auto;
+}
+
+.menu_item {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 20px;
 }
 
 .header_content {
@@ -76,6 +83,51 @@ button {
     justify-content: center;
     align-items: center;
     flex: 1 0 50%
+}
+
+.calendar {
+    background-color: #315329;
+    padding-left: 160px;
+    padding-right: 160px;
+    padding-top: 40px;
+    padding-bottom: 80px;
+}
+
+.upcoming_events {
+    color: #F9FAF8;
+    font-size: 36px;
+    font-weight: 900;
+    text-align: center;
+    padding-bottom: 20px;
+}
+
+.info_events{
+    display: flex;
+    flex-direction: row;
+    align-items: left;
+    justify-content: center;
+    padding-top: 40px;
+    gap: 20px;
+    color: #E5E7EB;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.event {
+    color: #E5E7EB;
+    font-size: 20px;
+    font-weight: 500;
+    display: flex;
+    flex-direction: column;
+    flex: 1 0 25%;
+}
+
+a:link {
+    color:#E5E7EB;
+}
+
+a:visited {
+    color: gray;
 }
 
 .info {
