--- a/styles/style.css
+++ b/styles/style.css
@@ -165,7 +165,8 @@ a:visited {
     border: 4px solid #0b8f12;
     border-radius: 16px;
     height: 200px;
-    flex: 1 1 auto;
+    width: 200px;
+    flex: 1 0 auto;
 }
 
 .text {
@@ -186,11 +187,6 @@ a:visited {
     font-size: 36px;
     font-style: italic;
     font-weight: lighter;
-}
-
-.author {
-    color: #1f372b;
-    text-align: right;
 }
 
 .action {
