Working on Calendar

--- a/styles/style.css
+++ b/styles/style.css
@@ -158,15 +158,20 @@ a:visited {
     display: flex;
     flex-direction: column;
     text-wrap: balance;
-    flex: 1;
+    flex: 1 0 auto;
 }
 
 .image {
     border: 4px solid #0b8f12;
     border-radius: 16px;
-    height: 200px;
-    width: 200px;
-    flex: 1 0 auto;
+    padding: 10px;
+    height: auto;
+    width: 300px;
+}
+
+.image img {
+    height: auto;
+    width: 300px;
 }
 
 .text {
